# orbit

./: .dockerignore  .gitignore  AUDIT_FIXES.md  Cargo.toml  Dockerfile.app  Dockerfile.node  Dockerfile.pg  LICENSE  NOTICE  PUBLISHING.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.changeset/: README.md  atomic-cache-hardening.md  beat-every-metric.md  calm-cvrs-rest.md  calm-orbits-breathe.md  config.json  custom-args-handler-ctx.md  durable-replica.md  fast-pipelines-rest.md  fix-cookie-ahead-of-rows.md  fix-lmid-revert.md  fix-server-cvr-atomic.md  initial-release.md  pg-tls-password-database-url.md  remove-permissions.md  sorted-index-wire-path.md  sqlite-pushdown.md  tier-zero-correctness.md  zero-parity-fixes.md
.github/workflows/: acceptance.yml  ci.yml  release.yml
apps/demo/: README.md  docker-compose.yml  orbit-drizzle.config.ts  package-lock.json  package.json  server-prod.mjs  tsconfig.json  vite.config.ts
apps/demo/db/: schema.ts
apps/demo/postgres/: 00-hba.sh  01-init.sql
apps/demo/scripts/: migrate.ts
apps/demo/src/: auth-client.ts  auth.ts  canvas.tsx  orbit-server.ts  orbit.ts  schema.gen.ts  shared.ts  styles.css
apps/demo/src/routes/: __root.tsx  _app.index.tsx  _app.tsx
apps/demo/src/routes/api/: auth.$.ts  push.ts  query.ts
crates/: package.json
crates/oql/: Cargo.toml
crates/oql/examples/: bench.rs  scenario_check.rs
crates/oql/src/: ast.rs  builder.rs  lib.rs  query.rs  value.rs
crates/oql/src/ivm/: catch.rs  cond_filter.rs  constraint.rs  exists.rs  filter.rs  join.rs  mod.rs  node.rs  operator.rs  schema.rs  skip.rs  source.rs  take.rs
crates/oql/tests/: builder.rs  ivm_pipeline.rs  nested_exists_correctness.rs  parity.rs  zql_differential.rs
crates/oql/tests/golden/: zql_fuzz_golden.json  zql_golden.json  zql_permissions_golden.json  zql_related_golden.json
crates/orbit-cache/: Cargo.toml
crates/orbit-cache/examples/: multinode_bench.rs  multinode_cluster_bench.rs  sqlite_bench.rs  sqlite_scenario_check.rs  todo_server.rs  wire_bench.rs
crates/orbit-cache/src/: changelog.rs  changestream.rs  cvr.rs  forward.rs  handshake.rs  lib.rs  metrics.rs  mutagen.rs  mutators.rs  objectstore.rs  permissions.rs  queries.rs  replica.rs  run.rs  server.rs  sharded.rs  sqlite_source.rs  view_sync.rs  walship.rs
crates/orbit-cache/src/pg/: mod.rs  pgoutput.rs  proto.rs  tls.rs
crates/orbit-cache/tests/: backfill.rs  big_txn.rs  changelog_bounded.rs  changelog_resume.rs  changestream_resume.rs  chunked_poke.rs  custom_mutators.rs  custom_queries.rs  cvr_pg.rs  cvr_resume.rs  ddl.rs  end_to_end.rs  forward.rs  handshake.rs  initial_sync.rs  lmid_no_revert.rs  multi_client.rs  multinode.rs  multinode_sqlite.rs  mutations.rs  objectstore_stream.rs  permissions.rs  pg_replication.rs  readiness.rs  server.rs  sharded.rs  single_node_server.rs  sqlite_differential.rs  sqlite_replica.rs  tls_pg.rs  toast.rs  view_sync.rs
crates/orbit-protocol/: Cargo.toml
crates/orbit-protocol/src/: lib.rs  messages.rs  mutation.rs  patches.rs
crates/orbit-schema/: Cargo.toml
crates/orbit-schema/src/: lib.rs
deploy/: Dockerfile  README.md  docker-compose.yml
deploy/acceptance/: docker-compose.yml  seed-post.sql  seed-pre.sql
scripts/: sync-versions.mjs
scripts/acceptance/: run.sh
