[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/zeronsh/orbit"
version = "0.3.5"

[workspace.dependencies]
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
rusqlite = { version = "0.32", features = ["bundled"] }
base64 = "0.22"
percent-encoding = "2"
smallvec = { version = "1", features = ["union", "const_generics"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
